config/k8s/base/www.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: www
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: www
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: www
    spec:
      containers:
      - image: gcr.io/k8s-dice-magic/www:latest
        name: www
        resources:
          limits:
            cpu: 100m
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 100Mi
        imagePullPolicy: Always
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/google-default
          name: google-default
          readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 10
      volumes:
      - name: google-default
        secret:
          defaultMode: 420
          secretName: google-default
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "www-service"
  namespace: "default"
  labels:
    app: "www"
spec:
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 8080
  selector:
    app: "www"
  type: "NodePort"
---
apiVersion: v1
items:
- apiVersion: autoscaling/v1
  kind: HorizontalPodAutoscaler
  metadata:
    labels:
      app: www
    name: www-hpa
    namespace: default
  spec:
    maxReplicas: 5
    minReplicas: 1
    scaleTargetRef:
      apiVersion: apps/v1beta1
      kind: Deployment
      name: www
    targetCPUUtilizationPercentage: 80
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
